--- a/uxers/src/Style/index.css
+++ b/uxers/src/Style/index.css
@@ -1,23 +1,23 @@
 @font-face {
   font-family: "Open Sans";
-  src: url("/src/fonts/OpenSans-Regular.ttf") format("ttf");
+  src: url("../fonts/OpenSans-Regular.ttf") format("ttf");
 }
 
 @font-face {
   font-family: "Open Sans";
-  src: url("/src/fonts/OpenSans-Bold.ttf") format("ttf");
+  src: url("../fonts/OpenSans-Bold.ttf") format("ttf");
   font-weight: bold;
 }
 
 @font-face {
   font-family: "Open Sans";
-  src: url("/src/fonts/OpenSans-Italic.ttf") format("ttf");
+  src: url("../fonts/OpenSans-Italic.ttf") format("ttf");
   font-style: italic;
 }
 
 @font-face {
   font-family: "Open Sans";
-  src: url("/src/fonts/OpenSans-BoldItalic.ttf") format("ttf");
+  src: url("../fonts/OpenSans-BoldItalic.ttf") format("ttf");
   font-style: italic;
   font-weight: bold;
 }
